--- a/sass/_estilo.scss
+++ b/sass/_estilo.scss
@@ -125,9 +125,10 @@ font-family: 'Chakra Petch', sans-serif;
   background-color: transparent;
 }
 %grid_img_footer {
-  width: 45px;
-  height: 45px;
+  width: 100px;
+  height: 100px;  
   align-items: flex-end;
+  border: 20px solid transparent;
 }
 %botum_center{
   background-color: transparent;
