--- a/sass/_estilo.scss
+++ b/sass/_estilo.scss
@@ -125,8 +125,8 @@ font-family: 'Chakra Petch', sans-serif;
   background-color: transparent;
 }
 %grid_img_footer {
-  width: 100px;
-  height: 100px;  
+  width: 90px;
+  height: 90px;  
   align-items: flex-end;
   border: 20px solid transparent;
 }
@@ -134,5 +134,11 @@ font-family: 'Chakra Petch', sans-serif;
   background-color: transparent;
   display: flex;
   justify-content: center
+}
+
+%container_pdf{
+  border: transparent;
+  width: 70%;
+  
 }
 
