--- a/sass/base.css
+++ b/sass/base.css
@@ -78,7 +78,7 @@ font-family: 'Orbitron', sans-serif;
 font-family: 'Chakra Petch', sans-serif;
 
 */
-#proycts h1, body main .inicio div .titulo1 {
+#about_me h1, #proycts h1, body main .inicio div .titulo1 {
   border: 15px solid transparent;
   background-color: transparent;
   font-family: "Orbitron", sans-serif;
@@ -97,8 +97,8 @@ body main .inicio div img {
   margin: auto;
 }
 
-body main h2 {
-  border: 15px solid transparent;
+#about_me h2, body main h2 {
+  border: 20px solid transparent;
   font-size: 30px;
   font-family: "Orbitron", sans-serif;
   text-align: center;
@@ -107,7 +107,7 @@ body main h2 {
   padding: 1rem 0rem 1rem 0rem;
 }
 
-#proycts h3, body main .inicio div h3 {
+#about_me h3, #proycts h3, body main .inicio div h3 {
   border: 15px solid transparent;
   font-size: 25px;
   text-align: center;
@@ -115,6 +115,15 @@ body main h2 {
   color: #ffffff;
   text-shadow: 1px 1px 2px black, 0 0 1em rgb(255, 0, 98), 0 0 0.2em blue;
   padding: 1rem 0rem 1rem 0rem;
+}
+
+#about_me p {
+  margin: 2rem;
+  font-size: 25px;
+  font-family: "Chakra Petch", sans-serif;
+  text-align: justify;
+  color: #ffffff;
+  text-shadow: 1px 1px 2px black, 0 0 1em rgb(255, 0, 111), 0 0 0.2em rgb(80, 83, 255);
 }
 
 body main .simulation .grid_contener_5 h3, body main .cad .grid_contener_4 h3, body main .micro .grid_contener_3 h3, body main .ide_sw .grid_contener_2 h3, body main .lenguaje_progra .grid_contener h3 {
@@ -157,6 +166,23 @@ body main .simulation .grid_contener_5 img, body main .cad .grid_contener_4 img,
 #about_me .container, #proycts .rasberry .container, #proycts .container {
   border: transparent;
   width: 70%;
+}
+
+#about_me #diplomado {
+  width: 320px;
+  height: 250px;
+  border-radius: 5%;
+}
+
+#about_me .carusel2, #about_me .contener_carrusel {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  width: 720px;
+}
+#about_me .carusel2 img, #about_me .contener_carrusel img {
+  height: 520px;
 }
 
 body main {
@@ -356,6 +382,14 @@ body main .simulation .grid_contener_5 #img_w {
   transform: scale(2);
 }
 
+#about_me .bullet p {
+  font-size: 25px;
+  padding-left: 30px;
+  text-shadow: 1px 1px 2px black, 0 0 1em rgb(255, 0, 111), 0 0 0.2em rgb(80, 83, 255);
+}
+#about_me #diplomado:hover {
+  transform: scale(2);
+}
 .fote section div h3 {
   font-family: "Gruppo", cursive;
   color: rgb(255, 255, 255);
