--- a/sass/base.css
+++ b/sass/base.css
@@ -182,6 +182,7 @@ body main .simulation .grid_contener_5 img, body main .cad .grid_contener_4 img,
 }
 #about_me .carusel_slim img, #about_me .learning_carru img, #about_me .contener_carrusel img {
   height: 540px;
+  border-radius: 5%;
 }
 
 #proycts .contener_carrusel {
@@ -193,6 +194,7 @@ body main .simulation .grid_contener_5 img, body main .cad .grid_contener_4 img,
 }
 #proycts .contener_carrusel img {
   height: 420px;
+  border-radius: 5%;
 }
 
 #about_me .container_curso {
@@ -203,6 +205,7 @@ body main .simulation .grid_contener_5 img, body main .cad .grid_contener_4 img,
 }
 #about_me .container_curso img {
   height: 480px;
+  border-radius: 5%;
 }
 
 #about_me .contener_curso_cis {
@@ -213,6 +216,19 @@ body main .simulation .grid_contener_5 img, body main .cad .grid_contener_4 img,
 }
 #about_me .contener_curso_cis img {
   height: 520px;
+  border-radius: 5%;
+}
+
+#about_me .contener_games {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+#about_me .contener_games img {
+  width: 700px;
+  height: 280px;
+  border-radius: 10%;
 }
 
 body main {
