--- a/sass/_estilo.scss
+++ b/sass/_estilo.scss
@@ -102,6 +102,16 @@ font-family: 'Chakra Petch', sans-serif;
     0 0 0.2em rgb(80, 83, 255);
 }
 
+%labels {
+  border: 15px solid transparent;
+  font-size: 15px;
+  text-align: center;
+  font-family: "Orbitron", sans-serif;
+  color: #ffffff;
+  text-shadow: 1px 1px 2px black, 0 0 1em rgb(255, 0, 98), 0 0 0.2em blue;
+  padding: 1rem 0rem 1rem 0rem;
+}
+
 %grid_h3 {
   border: 15px transparent;
   font-size: 25px;
@@ -188,18 +198,30 @@ font-family: 'Chakra Petch', sans-serif;
   margin-right: auto;
   width: 50%;
   img {
-    height: 520px;  
+    height: 520px;
     border-radius: 5%;
   }
 }
-  %contener_gamer {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width:100%;
-    img {
-      width: 700px;
-      height: 280px;  
-      border-radius: 10%;  
-    }
+%contener_gamer {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  height: 240px;
+  img {
+    width: 320px;
+    height: 200px;
+    border-radius: 10%;
+  }
+}
+
+%contener_carusel_movie {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  img {
+    height: 340px;
+    border-radius: 5%;
+  }
 }
