--- a/sass/base.css
+++ b/sass/base.css
@@ -32,9 +32,7 @@ body header nav ul a {
   font-size: 25px;
   color: white;
   font-family: "Orbitron", sans-serif;
-}
-
-/*
+} /*
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Vinyl&display=swap');
 font-family: 'Rubik Vinyl', cursive;
 
@@ -78,7 +76,7 @@ font-family: 'Orbitron', sans-serif;
 font-family: 'Chakra Petch', sans-serif;
 
 */
-#about_me h1, #proycts h1, body main .inicio div .titulo1 {
+#hobies h1, #about_me h1, #proycts h1, body main .inicio div .titulo1 {
   border: 15px solid transparent;
   background-color: transparent;
   font-family: "Orbitron", sans-serif;
@@ -96,7 +94,7 @@ body main .inicio div #logo_dave {
   border-radius: 20%;
 }
 
-#about_me h2, body main h2 {
+#hobies h2, #about_me h2, body main h2 {
   border: 20px solid transparent;
   font-size: 30px;
   font-family: "Orbitron", sans-serif;
@@ -106,7 +104,7 @@ body main .inicio div #logo_dave {
   padding: 1rem 0rem 1rem 0rem;
 }
 
-#about_me h3, #proycts h3, body main .inicio div h3 {
+#hobies h3, #about_me h3, #proycts h3, body main .inicio div h3 {
   border: 15px solid transparent;
   font-size: 25px;
   text-align: center;
@@ -116,13 +114,23 @@ body main .inicio div #logo_dave {
   padding: 1rem 0rem 1rem 0rem;
 }
 
-#about_me p {
+#hobies p, #about_me p {
   margin: 2rem;
   font-size: 25px;
   font-family: "Chakra Petch", sans-serif;
   text-align: justify;
   color: #ffffff;
   text-shadow: 1px 1px 2px black, 0 0 1em rgb(255, 0, 111), 0 0 0.2em rgb(80, 83, 255);
+}
+
+#hobies label {
+  border: 15px solid transparent;
+  font-size: 15px;
+  text-align: center;
+  font-family: "Orbitron", sans-serif;
+  color: #ffffff;
+  text-shadow: 1px 1px 2px black, 0 0 1em rgb(255, 0, 98), 0 0 0.2em blue;
+  padding: 1rem 0rem 1rem 0rem;
 }
 
 body main .simulation .grid_contener_5 h3, body main .cad .grid_contener_4 h3, body main .micro .grid_contener_3 h3, body main .ide_sw .grid_contener_2 h3, body main .lenguaje_progra .grid_contener h3 {
@@ -219,16 +227,28 @@ body main .simulation .grid_contener_5 img, body main .cad .grid_contener_4 img,
   border-radius: 5%;
 }
 
-#about_me .contener_games {
+#hobies .contener_games {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 100%;
+  height: 240px;
 }
-#about_me .contener_games img {
-  width: 700px;
-  height: 280px;
+#hobies .contener_games img {
+  width: 320px;
+  height: 200px;
   border-radius: 10%;
+}
+
+#hobies .movies {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+#hobies .movies img {
+  height: 340px;
+  border-radius: 5%;
 }
 
 body main {
