Update my portfolio at english

--- a/sass/_main_proyect.scss
+++ b/sass/_main_proyect.scss
@@ -7,6 +7,16 @@
   h3 {
     @extend %titulo3;
   }
+.DCU{
+    h2{
+      @extend %titulo2;
+    }
+    p{
+      @extend %parrafo;
+    }
+ }
+
+  
 
   .container {
     @extend %container_pdf;
